--- a/back_end/src/CMakeLists.txt
+++ b/back_end/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(main "main.cpp" "echo.pb.cc"  "main.h" "echo.grpc.pb.cc")
+add_executable(main "main.cpp" "data_engine.h" "date_engine.cpp" "extern/app.pb.cc" "user.h" "question.h" "infrastructure.h" "infrastructure.cpp" "app.cpp" "app.h")
 
 
 target_link_libraries(main ${CONAN_LIBS})
