--- a/back_end/test/CMakeLists.txt
+++ b/back_end/test/CMakeLists.txt
@@ -1,7 +1,11 @@
 enable_testing()
-
-add_executable(test "test.cpp " "../src/data_engine.h"  "../src/date_engine.cpp" "../src/extern/app.pb.cc" "../src/user.h" "../src/question.h" "../src/infrastructure.h" "../src/infrastructure.cpp" )
-
-target_link_libraries(test ${CONAN_LIBS})
 include(GoogleTest)
-gtest_discover_tests(test)
+
+add_executable(basetest "base_test.cpp " "../src/data_engine.h"  "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/user.h" "../src/question.h" "../src/infrastructure.h" "../src/infrastructure.cpp")
+
+target_link_libraries(basetest ${CONAN_LIBS})
+gtest_discover_tests(basetest)
+
+add_executable(localtest "local_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp")
+target_link_libraries(localtest ${CONAN_LIBS})
+gtest_discover_tests(localtest)
