日志系统改进，使用另一线程进行服务器关机功能实现

--- a/back_end/test/CMakeLists.txt
+++ b/back_end/test/CMakeLists.txt
@@ -6,6 +6,6 @@ add_executable(basetest "base_test.cpp" "../src/data_engine.h"  "../src/data_eng
 target_link_libraries(basetest ${CONAN_LIBS})
 gtest_discover_tests(basetest)
 
-add_executable(localtest "local_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp")
+add_executable(localtest "local_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp" "../src/extern/app.grpc.pb.cc" "../src/grpc.cpp")
 target_link_libraries(localtest ${CONAN_LIBS})
 gtest_discover_tests(localtest)
