完成功能迁移与data_engine重构，将原有app数据处理功能转发至data_engine完成

--- a/back_end/test/CMakeLists.txt
+++ b/back_end/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.23)
+
 enable_testing()
 include(GoogleTest)
 
@@ -6,6 +8,10 @@ add_executable(basetest "base_test.cpp" "../src/data_engine.h"  "../src/data_eng
 target_link_libraries(basetest ${CONAN_LIBS})
 gtest_discover_tests(basetest)
 
-add_executable(localtest "local_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp" "../src/extern/app.grpc.pb.cc" "../src/grpc.cpp")
-target_link_libraries(localtest ${CONAN_LIBS})
-gtest_discover_tests(localtest)
+#add_executable(localtest "local_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp" "../src/extern/app.grpc.pb.cc" "../src/grpc.cpp")
+#target_link_libraries(localtest ${CONAN_LIBS})
+#gtest_discover_tests(localtest)
+
+add_executable(engine_test "new_engine_test.cpp" "../src/app.cpp" "../src/app.h" "../src/user.h" "../src/question.h" "../src/data_engine.cpp" "../src/extern/app.pb.cc" "../src/infrastructure.cpp" "../src/extern/app.grpc.pb.cc" "../src/grpc.cpp")
+target_link_libraries(engine_test ${CONAN_LIBS})
+gtest_discover_tests(engine_test)
